fixed bug that created a extra white space on the right side of viewport in chrome mobile

--- a/assets/stylesheets/sass/landing-page/_home-page-overview.scss
+++ b/assets/stylesheets/sass/landing-page/_home-page-overview.scss
@@ -62,9 +62,8 @@
   }
 }
 
-.navigation {
- 
-  width: 100vw;
+.navigation { 
+  width: 100%;
   margin: 0 5vw 0 5vw;
   padding: 2.2vmin;
   z-index: 996;
